<resources>
    <string name="app_name">medenjak</string>
    <string name="background">background</string>
    <string name="korisni_ko_ime"><i>Korisničko ime</i></string>
    <string name="lozinka"><i>Lozinka</i></string>
    <string name="prijavite_se">Prijavite se</string>
    <string name="registrujte_se">Registrujte se</string>
    <string name="imate_nalog">Imate nalog?</string>
    <string name="ponovite_lozinku"><i>Ponovite lozinku</i></string>
    <string name="ime"><i>Ime</i></string>
    <string name="prezime"><i>Prezime</i></string>
    <string name="telefon"><i>Telefon</i></string>
    <string name="adresa"><i>Adresa</i></string>
    <string name="orders">Narudžbine</string>
    <string name="cart">Korpa</string>
    <string name="products">Proizvodi</string>

    <string name="picture">picture</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="description">Opis</string>
    <string name="way_of_use">Način upotrebe</string>
    <string name="price">Cena</string>
    <string name="broj_proizvoda">Broj proizvoda</string>
    <string name="user_data">Korisnički podaci</string>
    <string name="change_password">Promenite lozinku</string>
    <string name="log_out">Odjavite se</string>
    <string name="nova_lozinka">Nova lozinka</string>
    <string name="ponovite_novu_lozinku">Ponovite novu lozinku</string>
    <string name="make_order">Naruči</string>
    <string name="datum_dostave">Datum dostave</string>
    <string name="vrednost_narudbine">Vrednost narudžbine</string>
    <string name="status_narudbine">Status narudžbine</string>
</resources>