<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="101dp"
        android:background="@color/blend"
        android:orientation="vertical"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/control_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_details_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"
                    android:textColor="@color/link_blue"
                    tools:text="Opis"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/product_details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi saepe at aspernatur qui temporibus, nisi repellendus praesentium vero nam. Voluptates, non molestiae eius sed aperiam est distinctio dolores esse reiciendis enim cumque laboriosam quo neque cupiditate amet. Incidunt nulla sunt, voluptas temporibus consectetur exercitationem ipsam illo, voluptatem totam alias explicabo deleniti commodi quisquam, tenetur pariatur debitis maxime. Quo similique deleniti facere ratione sunt temporibus dolor a tempore, excepturi blanditiis fuga."
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi saepe at aspernatur qui temporibus, nisi repellendus praesentium vero nam. Voluptates, non molestiae eius sed aperiam est distinctio dolores esse reiciendis enim cumque laboriosam quo neque cupiditate amet. Incidunt nulla sunt, voluptas temporibus consectetur exercitationem ipsam illo, voluptatem totam alias explicabo deleniti commodi quisquam, tenetur pariatur debitis maxime. Quo similique deleniti facere ratione sunt temporibus dolor a tempore, excepturi blanditiis fuga." />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"
                    android:textColor="@color/link_blue"
                    android:layout_marginTop="17dp"
                    tools:text="Način upotrebe"
                    android:text="@string/way_of_use" />

                <TextView
                    android:id="@+id/product_details_way_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="14sp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi saepe at aspernatur qui temporibus, nisi repellendus praesentium vero nam. Voluptates, non molestiae eius sed aperiam est distinctio dolores esse reiciendis enim cumque laboriosam quo neque cupiditate amet. Incidunt nulla sunt, voluptas temporibus consectetur exercitationem ipsam illo, voluptatem totam alias explicabo deleniti commodi quisquam, tenetur pariatur debitis maxime. Quo similique deleniti facere ratione sunt temporibus dolor a tempore, excepturi blanditiis fuga."
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi saepe at aspernatur qui temporibus, nisi repellendus praesentium vero nam. Voluptates, non molestiae eius sed aperiam est distinctio dolores esse reiciendis enim cumque laboriosam quo neque cupiditate amet. Incidunt nulla sunt, voluptas temporibus consectetur exercitationem ipsam illo, voluptatem totam alias explicabo deleniti commodi quisquam, tenetur pariatur debitis maxime. Quo similique deleniti facere ratione sunt temporibus dolor a tempore, excepturi blanditiis fuga." />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_grey"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/product_details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"
                    android:textColor="#5DBD7B"
                    tools:text="1000 din."
                    android:text="TextView" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                android:layout_marginStart="80dp"
                android:textColor="@color/white"
                android:text="@string/broj_proizvoda" />

            <EditText
                android:id="@+id/item_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/primary"
                android:textAlignment="center"
                android:digits="0123456789"
                android:maxLength="3"
                android:text="1"
                android:inputType="number"
                android:textColor="@color/primary" />

        </LinearLayout>

        <Button
            android:id="@+id/put_in_cart_btn"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PrimaryColoredButton"
            android:text="Stavite u korpu" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>